tests/compile_fail/clone/union.rs
#[derive(derive_more::Clone)]
union MyUnion {
    i: u32,
}

fn main() {}